# feiyu

./: .cnb.yml  .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  PROGRESS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  start-client.sh  start-server.sh
.github/workflows/: release.yml
.mimocode/command/: startup.md  typecheck.md
apps/desktop/: .env.example  index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/data/: stickers.ts
apps/desktop/src/hooks/: useResizable.ts  useWebSocket.ts
apps/desktop/src/locales/: en.json  zh.json
apps/desktop/src/services/: api.ts  cacheService.ts  db.ts  serverConfig.ts  ws.ts
apps/desktop/src/stores/: authStore.ts  channelStore.ts  chatStore.ts  contactStore.ts  settingsStore.ts
apps/desktop/src/styles/: globals.css
apps/desktop/src/utils/: compressImage.ts  debugLog.ts
apps/mobile/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/mobile/src/: App.tsx  i18n.ts  main.tsx
apps/mobile/src/hooks/: useTheme.ts
apps/mobile/src/layouts/: TabBarLayout.tsx
apps/mobile/src/locales/: en.json  zh.json
apps/mobile/src/pages/: AuthPage.tsx  ChannelChatPage.tsx  ChannelsPage.tsx  ChatPage.tsx  ContactDetailPage.tsx  ContactsPage.tsx  ConversationsPage.tsx  (+3 more)
apps/server/: Cargo.toml  Dockerfile  config.toml
apps/server/migrations/: 001_init.sql  003_group_owner.sql  004_user_settings.sql  005_reactions_and_recall.sql  006_announcements_avatar.sql
apps/server/src/: config.rs  main.rs
apps/server/src/api/: announcements.rs  auth.rs  channels.rs  contacts.rs  conversations.rs  files.rs  messages.rs  mod.rs  reactions.rs  users.rs
apps/server/src/models/: announcement.rs  channel.rs  conversation.rs  message.rs  mod.rs  reaction.rs  user.rs  user_settings.rs
apps/server/src/services/: announcement.rs  auth.rs  channel.rs  contact.rs  conversation.rs  file.rs  message.rs  minio.rs  mod.rs  reaction.rs  user.rs
apps/server/src/ws/: handler.rs  hub.rs  mod.rs  protocol.rs
design/: README.md  SKILL.md  colors_and_type.css  components.css  css.json  library-consumption.json  uikit-plan.json
design/components/: avatar.json  button.json  card.json  chat-bubble.json  index.json  input.json  sidebar-nav.json
design/preview/: component-avatar.html  component-button.html  component-card.html  component-chat-bubble.html  component-input.html  component-sidebar-nav.html
design/ui_kits/dashboard/: index.html
docs/superpowers/plans/: 2026-06-12-phase1-foundation.md  2026-06-12-phase2-core-im.md  2026-06-12-phase3-user-system.md  2026-06-12-phase4-channels.md  2026-06-12-phase5-polish.md  2026-06-15-client-message-cache.md  2026-06-15-offline-resilience-and-storage.md  2026-06-16-login-server-config.md
docs/superpowers/specs/: 2026-06-12-feiyu-im-design.md  2026-06-15-offline-resilience-and-storage-design.md  2026-06-16-login-server-config-design.md
scripts/: build-desktop.sh  build-server.sh  gen_icons.py
(+35 files in other folders)
