[package]
name = "feiyu-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "feiyu-server"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
redis.workspace = true
futures.workspace = true
